tests/compile_fail/escape_closure.stderr
error[E0521]: borrowed data escapes outside of closure
 --> tests/compile_fail/escape_closure.rs:7:5
  |
4 |   let mut escapee = None;
  |       ----------- `escapee` declared here, outside of the closure body
5 |
6 |   bump.scoped(|scope| {
  |                ----- `scope` is a reference that is only valid in the closure body
7 |     escapee = Some(scope.alloc("escape?"));
  |     ^^^^^^^ `scope` escapes the closure body here
